Added calandar table

--- a/index.html
+++ b/index.html
@@ -6,14 +6,71 @@
     	<meta name="keywords" content="one, two, three">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
-		<title>Blank Template</title>
+		<title>Meal Planner</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+		<!--Update table such that people can customize their meals-->
+		<table>
+			<colgroup>
+				<col>
+				<col class="days" span="7">
 
+			</colgroup>
+			<tr class="header">
+				<td>&nbsp</td>
+				<th>Sunday</th>
+				<th>Monday</th>
+				<th>Tuesday</th>
+				<th>Wednesday</th>
+				<th>Thursday</th>
+				<th>Friday</th>
+				<th>Saturday</th>
+			</tr>
+			<tr>
+				<th>Breakfast</th>
+				<td>Sun</td>
+				<td>Mon</td>
+				<td>Tues</td>
+				<td>Wed</td>
+				<td>Thur</td>
+				<td>Fri</td>
+				<td>Sat</td>
+			</tr>
+			<tr>
+				<th>Lunch</th>
+				<td>Sun</td>
+				<td>Mon</td>
+				<td>Tues</td>
+				<td>Wed</td>
+				<td>Thur</td>
+				<td>Fri</td>
+				<td>Sat</td>
+			</tr>
+			<tr>
+				<th>Dinner</th>
+				<td>Sun</td>
+				<td>Mon</td>
+				<td>Tues</td>
+				<td>Wed</td>
+				<td>Thur</td>
+				<td>Fri</td>
+				<td>Sat</td>
+			</tr>
+			<tr>
+				<th>Snack</th>
+				<td>Sun</td>
+				<td>Mon</td>
+				<td>Tues</td>
+				<td>Wed</td>
+				<td>Thur</td>
+				<td>Fri</td>
+				<td>Sat</td>
+			</tr>
+		</table>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
