Added drag and drop functionality

--- a/index.html
+++ b/index.html
@@ -32,45 +32,48 @@
 			</tr>
 			<tr>
 				<th>Breakfast</th>
-				<td>Sun</td>
-				<td>Mon</td>
-				<td>Tues</td>
-				<td>Wed</td>
-				<td>Thur</td>
-				<td>Fri</td>
-				<td>Sat</td>
+				<td id="bfSun" class="dropzone">s</td>
+				<td id="bfMon" class="dropzone">Mon</td>
+				<td id="bfTues" class="dropzone">Tues</td>
+				<td id="bfWed" class="dropzone">Wed</td>
+				<td id="bfThur" class="dropzone">Thur</td>
+				<td id="bfFri" class="dropzone">Fri</td>
+				<td id="bfSat" class="dropzone">Sat</td>
 			</tr>
 			<tr>
 				<th>Lunch</th>
-				<td>Sun</td>
-				<td>Mon</td>
-				<td>Tues</td>
-				<td>Wed</td>
-				<td>Thur</td>
-				<td>Fri</td>
-				<td>Sat</td>
+				<td id="lunchSun" class="dropzone">Sun</td>
+				<td id="lunchMon" class="dropzone">Mon</td>
+				<td id="lunchTues" class="dropzone">Tues</td>
+				<td id="lunchWed" class="dropzone">Wed</td>
+				<td id="lunchThur" class="dropzone">Thur</td>
+				<td id="lunchFri" class="dropzone">Fri</td>
+				<td id="lunchSat" class="dropzone">Sat</td>
 			</tr>
 			<tr>
 				<th>Dinner</th>
-				<td>Sun</td>
-				<td>Mon</td>
-				<td>Tues</td>
-				<td>Wed</td>
-				<td>Thur</td>
-				<td>Fri</td>
-				<td>Sat</td>
+				<td id="dinSun" class="dropzone">Sun</td>
+				<td id="dinMon" class="dropzone">Mon</td>
+				<td id="dinTues" class="dropzone">Tues</td>
+				<td id="dinWed" class="dropzone">Wed</td>
+				<td id="dinThur" class="dropzone">Thur</td>
+				<td id="dinFri" class="dropzone">Fri</td>
+				<td id="dinSat" class="dropzone">Sat</td>
 			</tr>
 			<tr>
 				<th>Snack</th>
-				<td>Sun</td>
-				<td>Mon</td>
-				<td>Tues</td>
-				<td>Wed</td>
-				<td>Thur</td>
-				<td>Fri</td>
-				<td>Sat</td>
+				<td id="snackSun" class="dropzone">Sun</td>
+				<td id="snackMon" class="dropzone">Mon</td>
+				<td id="snackTues" class="dropzone">Tues</td>
+				<td id="snackWed" class="dropzone">Wed</td>
+				<td id="snackThur" class="dropzone">Thur</td>
+				<td id="snackFri" class="dropzone">Fri</td>
+				<td id="snackSat" class="dropzone">Sat</td>
 			</tr>
 		</table>
+		<span>Meal name: </span>
+		<input type="text" id="mealname" placeholder="Meal Name" >
+		<div id='dragSqr' draggable="true">Drag Me</div>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
