--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		</table>
 		<span>Meal name: </span>
 		<input type="text" id="mealname" placeholder="Meal Name" >
-		<div id='dragSqr' draggable="true">Drag Me</div>
+		<div id='dragSqr' draggable="true">Drag Me!</div>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
